--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,13 @@
 
   <distributionManagement>
     <site>
-      <id>site-server</id>
+      <id>deployment</id>
       <name>Test Project Site</name>
-      <url>file:///tmp/maven-project-site</url>
+      <url>http://65.0.61.150:8081/repository/Malatesh-Maven/</url>
     </site>
   </distributionManagement>
 
-  <build>
+  <build> 
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
